--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" href="./asthetic/MainASTH.css">
-    <title>Document</title>
+    <title>TXT Editor - By Blood.</title>
 </head>
 <body>
     <header>
