--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
         <div class="head-midl"></div>
         <div class="head-rigt">
             <p>New Project &#10009;</p>
-            <p>Save &#9872;</p>
+            <p onclick="downloadFile()">Save &#9872;</p>
 
         </div>
     </header>
-    <div class="TextEDIT"></div>
-    <div class="read" contenteditable="true" role="alert"></div>
-    
+    <div class="TextEDIT">
+        <div class="font_s_cont">
+            <input type="text" class="comand_Box" placeholder="{search}">
+        </div>
+    </div>
+    <div class="read" contenteditable="true" type="text"></div>
+    <script src="./script/script.js"></script>
 </body>
 </html>
