--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="head-left">
             By Blood.
             <span>Work-board</span>
-            <a href="#" title="Info about the Work-board">i</a>
+            <a href="./info-page.html" target="_blank" title="Info about the Work-board">i</a>
         </div>
         <div class="head-midl"></div>
         <div class="head-rigt">
