--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="head-midl"></div>
         <div class="head-rigt">
-            <p>New Project &#10009;</p>
+            <p class="tick">New Project &#10009;</p>
             <p onclick="downloadFile()">Save &#9872;</p>
 
         </div>
