--- a/info-page.html
+++ b/info-page.html
@@ -39,7 +39,7 @@
             height: 30px;
             display: flex;
             align-items: center;
-            justify-content: right;
+            justify-content: center;
             padding: 0px 40px;
         }
         .DownG a{
@@ -67,7 +67,7 @@
         <div class="Logo">By Blood.<span>Work-board</span></div>
     </header>
     <div class="DownG">
-        <a href="#" ><p class="Guide_btn">Download Guide 🕮</p></a>
+        <a href="#" ><p class="Guide_btn">Download Guide 🕮 .Docs</p></a>
     </div>
     <a href="./index.html">Home</a>
     
