--- a/info-page.html
+++ b/info-page.html
@@ -42,10 +42,10 @@
             justify-content: center;
             padding: 0px 40px;
         }
-        .DownG a{
+        .DownG {
             text-decoration: none;
         }
-        .DownG a .Guide_btn{
+        .DownG  .Guide_btn{
             font-family: Arial, Helvetica, sans-serif;
             color: #fff;
             height: 25px;
@@ -56,10 +56,7 @@
             border: solid 3px #000;
             border-radius: 8px;
         }
-        .DownG a:hover .Guide_btn{
-            background-color: red;
-            border: solid 3px red;
-        }
+       
     </style>
 </head>
 <body>
@@ -67,7 +64,7 @@
         <div class="Logo">By Blood.<span>Work-board</span></div>
     </header>
     <div class="DownG">
-        <a href="#" ><p class="Guide_btn">Download Guide 🕮 .Docs</p></a>
+        <p class="Guide_btn">Download Guide 🕮 .Docs</p>
     </div>
     <a href="./index.html">Home</a>
     
