--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Stylesheet" href="./asthetic/MainASTH.css">
+    <link rel="icon" type="images" href="./material/stuff/TxTIcon.png">
     <title>Work-board</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
     </header>
     <div class="TextEDIT">
         <div class="font_s_cont">
-            <input type="text" class="comand_Box" placeholder="{search}">
+            <input type="text" class="comand_Box" placeholder="{search} - press ' / ' on keyboard">
         </div>
     </div>
     <div class="read" contenteditable="true" type="text"></div>
