--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     </header>
     <div class="TextEDIT">
         <div class="font_s_cont">
-            <input type="text" class="comand_Box" placeholder="{search} - press ' / ' on keyboard">
+            <input type="text" class="comand_Box" placeholder=" Press ' Ctrl+ / ' for access">
         </div>
     </div>
     <div class="read" contenteditable="true" type="text"></div>
     <script src="./script/script.js"></script>
+    
 </body>
 </html>
