--- a/info-page.html
+++ b/info-page.html
@@ -3,96 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work-board/info</title>
     <style>
         *{
-            margin: 0px;
-            padding: 0px;
+            margin: 0;
+            padding: 0;
         }
-        body {
+        body{
             background-color: #282C35;
+            color: #fff;
         }
-        header{
-            height: 70px;
+        header .hea{
+            background-color: red;
+            height: 60px;
             display: flex;
             align-items: center;
             justify-content: center;
-        }
-        header .Logo {
-            color: red;
+            font-size: 2.2rem;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-            font-size: 2.5rem;
-            display: flex;
-            align-items: center;
         }
-        header .Logo span{
-            color: #fff;
+        header .hea span{
             font-size: 1.2rem;
             font-family: Arial, Helvetica, sans-serif;
             margin: 0px 12px 0px 12px;
         }
-        .info-nav{
-            height: 30px;
-            background-color: red;
-        }
-        .DownG{
-            height: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 0px 40px;
-        }
-        .DownG {
-            text-decoration: none;
-        }
-        .DownG  .Guide_btn{
-            font-family: Arial, Helvetica, sans-serif;
-            color: #fff;
-            height: 25px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 230px;
-            background-color: #000;
-            border: solid 3px #000;
-            border-radius: 8px;
-        }
-        .DownH {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .DownH .DownG_Con{
-            padding: 20px 0px;
-            background-color: #000;
-            width: 236px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-bottom: solid 1px #fff;
-            border-left: solid 1px #fff;
-            border-right: solid 1px #fff;
-        }
-        .DownH .DownG_Con a{
-            text-decoration: none;
-            color: red;
-        }
     </style>
+    <title>Document</title>
 </head>
 <body>
     <header>
-        <div class="Logo">By Blood.<span>Work-board</span></div>
+        <p class="hea">By Blood.<span>Work-board</span></p>
     </header>
-    <div class="DownG">
-        <p class="Guide_btn">Download Guide 🕮 .Docs</p>
-    </div>
-    <div class="DownH">
-        <div class = "DownG_Con">
-            <a href="#">Guide1.docx</a>
-        </div>
-    </div>
-    
-    <a href="./index.html">Home</a>
-    
+    <seaction>
+        <p></p>
+    </seaction>
 </body>
 </html>
