--- a/info-page.html
+++ b/info-page.html
@@ -26,8 +26,13 @@
             font-family: Arial, Helvetica, sans-serif;
             margin: 0px 12px 0px 12px;
         }
+        p{
+            text-align: center;
+            margin: 20px;
+        }
     </style>
-    <title>Document</title>
+    <link rel="icon" type="images" href="./material/stuff/TxTIcon.png">
+    <title>Work-board-Docs</title>
 </head>
 <body>
     <header>
